fixed nav buttones on mobile

--- a/app/styles/comic.css
+++ b/app/styles/comic.css
@@ -8,8 +8,7 @@
 
 .comic-viewer-nav-links {
     margin: 0 auto;
-    width: 92%;
-    max-width: 440px;
+    width: 96%;
     display: flex;
     justify-content: space-between;
 }
@@ -30,7 +29,7 @@
 .comic-viewer-ad-buttons {
     display: flex;
     justify-content: space-between;
-    width: 85%;
+    width: 88%;
     margin: 0 auto;
     max-width: 420px;
 }
@@ -61,7 +60,7 @@
     margin: 0 auto;
     border: 2px solid rgba(18, 18, 18, .75);
     color: #121212d9;
-    width: 85%;
+    width: 88%;
     max-width: 420px;
     padding: 10px 0;
     text-align: center;
@@ -134,5 +133,9 @@
     #comic-viewer-comic {
         position: absolute;
         bottom: 0;
+    }
+
+    .comic-viewer-nav-links {
+        max-width: 440px;
     }
 }
